@@ -14,6 +14,7 @@ javafx {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    implementation 'org.controlsfx:controlsfx:11.1.1'
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -24,6 +25,9 @@ tasks.withType(JavaCompile) {
 
 application {
     mainClass = 'bfst22.vector.App'
+    applicationDefaultJvmArgs =  [
+            "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+    ]
 }
 
 tasks.named('test') {
